# Hikikomori_Android

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: slide_out_from_bottom.xml
app/src/main/res/drawable/: bg_no_image.xml  bg_purple_theme.xml  ic_launcher_background.xml  vector_email.xml  vector_icon_back.xml  vector_icon_collection.xml  vector_icon_file.xml  vector_launcher_icon.xml  vector_me.xml  vector_more_black.xml  vector_more_white.xml  vector_no_select.xml  vector_notification.xml  vector_select.xml  vector_switch_off.xml  vector_switch_on.xml
app/src/main/res/layout/: activity_camera.xml  activity_file.xml  activity_main.xml  (+13 more)
gradle/wrapper/: gradle-wrapper.properties
libbasetools/: build.gradle
libmedia/: build.gradle  proguard-rules.pro
libmedia/src/main/cpp/: CMakeLists.txt  NativeAssertManager.cpp  NativeCameraRecorder.cpp  NativeOpenGLSampleRender.cpp  NativePlayer.cpp
libmedia/src/main/cpp/client/: CameraVideoRecorder.cpp  VioletMediaPlayer.cpp
libmedia/src/main/cpp/client/include/: CameraVideoRecorder.h  VioletMediaPlayer.h
libmedia/src/main/cpp/client/player/: MediaPlayer.h  VioletMediaPlayer.cpp  VioletMediaPlayer.h
libmedia/src/main/cpp/client/recorder/: CameraVideoRecorder.cpp  CameraVideoRecorder.h  HardwareMediaEncoder.cpp  SoftwareMediaEncoder.h
libmedia/src/main/cpp/component/base/: AVSurface.h  Callback.h  CustomContainer.h  GLUtils.cpp  GLUtils.h  LinkedBlockingQueue.h  MediaDef.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  looper.cpp
libmedia/src/main/cpp/component/decoder/: AVInputEngine.cpp  AVInputEngine.h  AudioFFDecoder.cpp  AudioFFDecoder.h  Decoder.h  FFAudioDecoder.cpp  FFAudioDecoder.h  FFBaseDecoder.cpp  FFBaseDecoder.h  FFBaseDeocder.h  FFMediaInputEngine.cpp  FFMediaInputEngine.h  FFVideoDecoder.cpp  FFVideoDecoder.h  FFmpegDeocder.h  InputEngine.h  VideoFFDecoder.cpp  VideoFFDecoder.h
libmedia/src/main/cpp/component/decoder/audio/: FFAudioDecoder.cpp  FFAudioDecoder.h
libmedia/src/main/cpp/component/decoder/video/: FFVideoDecoder.cpp  FFVideoDecoder.h  VideoDecoder.cpp  VideoDecoder.h
libmedia/src/main/cpp/component/demuxer/: MediaDemuxer.cpp  MediaDemuxer.h
libmedia/src/main/cpp/component/encoder/: FFBaseEncoder.h
libmedia/src/main/cpp/component/encoder/audio/: AudioEncoder.cpp  FFAudioEncoder.cpp
libmedia/src/main/cpp/component/encoder/video/: FFVideoEncoder.cpp  FFVideoEncoder.h
libmedia/src/main/cpp/component/muxer/: MediaMuxer.h
libmedia/src/main/cpp/component/render/audio/: OpenSLAudioRender.cpp  OpenSLAudioRender.h
libmedia/src/main/cpp/component/render/video/: GLRenderWindow.cpp  GLRenderWindow.h  ImageGLRender.cpp  ImageGLRender.h  VideoNativeRender.cpp
libmedia/src/main/cpp/component/sync/: MediaSync.cpp  MediaSync.h
libmedia/src/main/cpp/core/: EglCore.cpp  FFAudioDecoder.cpp  FFAudioEncoder.cpp  FFBaseDecoder.cpp  FFMediaInputEngine.cpp  FFVideoDecoder.cpp  GLRenderWindow.cpp  ImageGLRender.cpp  MediaMuxer.cpp  OpenSLAudioRender.cpp  VideoNativeRender.cpp  looper.cpp
libmedia/src/main/cpp/core/include/: Callback.h  FFAudioDecoder.h  FFAudioEncoder.h  FFBaseDecoder.h  FFBaseEncoder.h  FFMediaDef.h  FFMediaInputEngine.h  FFVideoDecoder.h  FFVideoEncoder.h  GLRenderWindow.h  GLUtils.h  ImageGLRender.h  MediaSync.h  OpenSLAudioRender.h  VideoNativeRender.h
libmedia/src/main/cpp/eglexample/: TriangleSample.cpp  TriangleSample.h
libmedia/src/main/cpp/include/libavformat/: avformat.h
libmedia/src/main/cpp/libs/include/fdk-aac/: aacdecoder_lib.h
libmedia/src/main/cpp/libs/include/libavfilter/: avfilter.h
libmedia/src/main/cpp/libs/include/libavformat/: avformat.h
libmedia/src/main/cpp/libs/include/libavutil/: common.h  threadmessage.h
libmedia/src/main/cpp/libs/include/x264/: x264.h
libmedia/src/main/cpp/media/: FFMediaPlayer.cpp  FFMediaPlayer.h  MediaClient.cpp  MediaClient.h  MediaCtrlItf.h  MediaPlayer.h  VioletMediaPlayer.cpp  VioletMediaPlayer.h
libmedia/src/main/cpp/media/common/: ImageRenderItf.h  MediaDef.h  MediaEventCallback.h  looper.cpp  looper.h
libmedia/src/main/cpp/media/decoder/: Decoder.h  FFBaseDecoder.cpp  FFBaseDecoder.h
libmedia/src/main/cpp/media/decoder/audio/: AudioDecoder.cpp  AudioDecoder.h
libmedia/src/main/cpp/media/decoder/video/: VideoDecoder.cpp  VideoDecoder.h
libmedia/src/main/cpp/media/egl/: EglCore.cpp  EglCore.h  EglSurfaceBase.cpp  EglSurfaceBase.h  NativeSurface.cpp  NativeSurface.h  OffscreenSurface.cpp  OffscreenSurface.h  Surface.h  VioletEGLSurface.cpp  VioletEGLSurface.h  WindowSurface.cpp  WindowSurface.h
libmedia/src/main/cpp/media/eglexample/: BaseExample.h  BaseSample.h  OpenGLSampleRender.h  TriangleExample.cpp  TriangleExample.h
libmedia/src/main/cpp/media/encoder/: Encoder.h
libmedia/src/main/cpp/media/encoder/audio/: AudioEncoder.cpp  AudioEncoder.h
libmedia/src/main/cpp/media/encoder/video/: VideoEncoder.cpp  VideoEncoder.h
libmedia/src/main/cpp/media/queue/: ThreadSafeQueue.cpp  ThreadSafeQueue.h
libmedia/src/main/cpp/media/recorder/: CameraVideoRecorder.cpp  CameraVideoRecorder.h  HardwareMediaEncoder.h  SoftwareMediaEncoder.cpp
libmedia/src/main/cpp/media/recorder/video/: CameraVideoRecorder.cpp  CameraVideoRecorder.h  FFVideoEncoder.cpp  FFVideoEncoder.h  VideoEncoder.h
libmedia/src/main/cpp/media/render/: Render.h
libmedia/src/main/cpp/media/render/audio/: AudioRender.h  OpenSLAudioRender.cpp  OpenSLAudioRender.h
libmedia/src/main/cpp/media/render/video/: GLRenderWindow.cpp  GLRenderWindow.h  ImageGLRender.cpp  ImageGLRender.h  NativeVideoRender.cpp  NativeVideoRender.h  VideoGLRender.cpp  VideoGLRender.h  VideoNativeRender.cpp  VideoNativeRender.h  VideoRender.h
libmedia/src/main/cpp/media/sync/: MediaSync.cpp  MediaSync.h
libmedia/src/main/cpp/media/util/: GLUtils.cpp  GLUtils.h  ImageDef.h  LogUtil.h
libmedia/src/main/cpp/nativeapi/: NativeAssertManager.cpp  NativeCameraRecorder.cpp  NativePlayer.cpp
libmedia/src/main/cpp/utils/: LogUtil.h  NativeAssertManager.h  VioletAssertManager.cpp
libnetwork/: build.gradle
(+166 files in other folders)
